@@ -40,29 +40,21 @@
 		#include <LUFA/Drivers/USB/USB.h>
 
 	/* Macros: */
-		#if defined(__AVR_AT90USB1286__)
+		#if defined(__AVR_AT90USB1287__)
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x97
 			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_AT90USB1287__)
+		#elif defined(__AVR_AT90USB647__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x96
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_AT90USB1286__)
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x97
 			#define AVR_SIGNATURE_3               0x82
 		#elif defined(__AVR_AT90USB646__)
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x96
-			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_AT90USB647__)
-			#define AVR_SIGNATURE_1               0x1E
-			#define AVR_SIGNATURE_2               0x96
-			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_AT90USB162__)
-			#define AVR_SIGNATURE_1               0x1E
-			#define AVR_SIGNATURE_2               0x94
-			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_AT90USB82__)
-			#define AVR_SIGNATURE_1               0x1E
-			#define AVR_SIGNATURE_2               0x94
 			#define AVR_SIGNATURE_3               0x82
 		#elif defined(__AVR_ATmega32U6__)
 			#define AVR_SIGNATURE_1               0x1E
@@ -76,6 +68,26 @@
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x94
 			#define AVR_SIGNATURE_3               0x88
+		#elif defined(__AVR_ATmega32U2__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x94
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_ATmega16U2__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x94
+			#define AVR_SIGNATURE_3               0x89
+		#elif defined(__AVR_AT90USB162__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x94
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_ATmega8U2__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x93
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_AT90USB82__)
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x93
+			#define AVR_SIGNATURE_3               0x89
 		#else
 			#error The selected AVR part is not currently supported by this bootloader.
 		#endif
