@@ -63,12 +63,17 @@
 		 */		
 		#define ATTR_CAN_DOWNLOAD                 (1 << 0)
 
-		#if defined(__AVR_AT90USB1286__)
+		#if defined(__AVR_AT90USB1287__)
 			#define PRODUCT_ID_CODE               0x2FFB
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x97
 			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_AT90USB1287__)
+		#elif defined(__AVR_AT90USB647__)
+			#define PRODUCT_ID_CODE               0x2FF9
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x96
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_AT90USB1286__)
 			#define PRODUCT_ID_CODE               0x2FFB
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x97
@@ -83,11 +88,6 @@
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x95
 			#define AVR_SIGNATURE_3               0x88
-		#elif defined(__AVR_AT90USB647__)
-			#define PRODUCT_ID_CODE               0x2FF9
-			#define AVR_SIGNATURE_1               0x1E
-			#define AVR_SIGNATURE_2               0x96
-			#define AVR_SIGNATURE_3               0x82
 		#elif defined(__AVR_ATmega32U4__)
 			#define PRODUCT_ID_CODE               0x2FF4
 			#define AVR_SIGNATURE_1               0x1E
@@ -98,6 +98,16 @@
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x94
 			#define AVR_SIGNATURE_3               0x88
+		#elif defined(__AVR_ATmega32U2__)
+			#define PRODUCT_ID_CODE               0x2FF0
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x94
+			#define AVR_SIGNATURE_3               0x82
+		#elif defined(__AVR_ATmega16U2__)
+			#define PRODUCT_ID_CODE               0x2FEF
+			#define AVR_SIGNATURE_1               0x1E
+			#define AVR_SIGNATURE_2               0x94
+			#define AVR_SIGNATURE_3               0x89
 		#elif defined(__AVR_AT90USB162__)
 			#define PRODUCT_ID_CODE               0x2FFA
 			#define AVR_SIGNATURE_1               0x1E
@@ -108,11 +118,6 @@
 			#define AVR_SIGNATURE_1               0x1E
 			#define AVR_SIGNATURE_2               0x93
 			#define AVR_SIGNATURE_3               0x82
-		#elif defined(__AVR_ATmega16U2__)
-			#define PRODUCT_ID_CODE               0x2FEF
-			#define AVR_SIGNATURE_1               0x1E
-			#define AVR_SIGNATURE_2               0x94
-			#define AVR_SIGNATURE_3               0x89
 		#elif defined(__AVR_AT90USB82__)
 			#define PRODUCT_ID_CODE               0x2FEE
 			#define AVR_SIGNATURE_1               0x1E
